--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@radix-ui/react-switch": "^1.0.3",
         "@radix-ui/react-tabs": "^1.0.4",
         "@radix-ui/react-toast": "^1.1.5",
+        "@reduxjs/toolkit": "^2.0.1",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.0.0",
         "cmdk": "^0.2.0",
@@ -32,6 +33,7 @@
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.48.2",
         "react-icons": "^4.12.0",
+        "react-redux": "^9.0.4",
         "react-router-dom": "^6.20.1",
         "tailwind-merge": "^2.1.0",
         "tailwindcss-animate": "^1.0.7",
