--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "react-icons": "^4.12.0",
         "react-redux": "^9.0.4",
         "react-router-dom": "^6.20.1",
+        "socket.io-client": "^4.7.2",
         "tailwind-merge": "^2.1.0",
         "tailwindcss-animate": "^1.0.7",
         "zod": "^3.22.4"
