--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.48.2",
         "react-icons": "^4.12.0",
+        "react-intersection-observer": "^9.5.3",
         "react-redux": "^9.0.4",
         "react-router-dom": "^6.20.1",
         "socket.io-client": "^4.7.2",
