--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "react-intersection-observer": "^9.5.3",
         "react-redux": "^9.0.4",
         "react-router-dom": "^6.20.1",
+        "react-spinners": "^0.13.8",
         "socket.io-client": "^4.7.2",
         "tailwind-merge": "^2.1.0",
         "tailwindcss-animate": "^1.0.7",
