--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "cmdk": "^0.2.0",
         "framer-motion": "^10.16.16",
         "lucide-react": "^0.294.0",
+        "next-themes": "^0.2.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.48.2",
@@ -38,6 +39,7 @@
         "react-router-dom": "^6.20.1",
         "react-spinners": "^0.13.8",
         "socket.io-client": "^4.7.2",
+        "sonner": "^1.3.1",
         "tailwind-merge": "^2.1.0",
         "tailwindcss-animate": "^1.0.7",
         "zod": "^3.22.4"
