--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
         "@radix-ui/react-tabs": "^1.0.4",
         "@radix-ui/react-toast": "^1.1.5",
         "@reduxjs/toolkit": "^2.0.1",
+        "@tanstack/react-table": "^8.11.7",
+        "@tanstack/vue-table": "^8.11.7",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.0.0",
         "cmdk": "^0.2.0",
