--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "react-intersection-observer": "^9.5.3",
         "react-redux": "^9.0.4",
         "react-router-dom": "^6.20.1",
+        "react-select": "^5.8.0",
         "react-spinners": "^0.13.8",
         "socket.io-client": "^4.7.2",
         "sonner": "^1.3.1",
