--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "react-router-dom": "^6.20.1",
         "react-select": "^5.8.0",
         "react-spinners": "^0.13.8",
+        "react-virtuoso": "^4.7.7",
         "socket.io-client": "^4.7.2",
         "sonner": "^1.3.1",
         "tailwind-merge": "^2.1.0",
