--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 VITE_API_BASE_URL = https://api.avibet.io
 VITE_BASE_URL = https://avibet.io
-VITE_BOT_NAME = aviatorbooootbot
+VITE_BOT_NAME = avibet_bot
